syntax = "proto3";

option go_package = "document-generators-presentation-abstractions";

package Edm.DocumentGenerators.Presentation.Abstractions;

option csharp_namespace = "Edm.DocumentGenerators.Presentation.Abstractions";

import "Grpc/Services/Contracts/Statuses/Types/document_status_type.proto";
import "Grpc/Services/Contracts/Statuses/Parameters/document_status_parameter.proto";

service DocumentsStatusesParametersService {
  rpc GetDefaultParametersByStatusType(GetDefaultDocumentsStatusesParametersByStatusTypeQuery) returns (GetDefaultDocumentsStatusesParametersByStatusTypeQueryResponse);
}

message GetDefaultDocumentsStatusesParametersByStatusTypeQuery {
}

message GetDefaultDocumentsStatusesParametersByStatusTypeQueryResponse {
  repeated DocumentsStatusesParametersByStatusTypeDto parametersByStatusType = 1;
}

message DocumentsStatusesParametersByStatusTypeDto {
  DocumentStatusTypeDto type = 1;
  repeated DocumentStatusParameterDto parameters = 2;
}
